--- a/rio.yaml
+++ b/rio.yaml
@@ -15,3 +15,4 @@ pipelines:
       # PYTHON_WHEEL_VERSION: 0.33.1
       PYTHON_VERSION_DEV_TIMESTAMP: true
       PYTHON_BUILD_WHEEL: true
+      PYTHON_TEST_COMMAND: "echo ok"
