--- a/rio.yaml
+++ b/rio.yaml
@@ -16,3 +16,6 @@ pipelines:
       PYTHON_VERSION_DEV_TIMESTAMP: true
       PYTHON_BUILD_WHEEL: true
       PYTHON_TEST_COMMAND: "echo ok"
+  package:
+    libraries: true
+    release: true
