--- a/rio.yaml
+++ b/rio.yaml
@@ -3,7 +3,7 @@ schemaVersion: 2.0
 pipelines:
 - branchName: main
   build:
-    template: buildozer:v4:build
+    template: buildozer:v4:publish
   machine:
     env:
       PYTHON_VERSION: python-3.9
@@ -16,7 +16,6 @@ pipelines:
       PYTHON_VERSION_DEV_TIMESTAMP: true
       PYTHON_BUILD_WHEEL: true
       PYTHON_TEST_COMMAND: "echo ok"
-
-package:
-  libraries: true
-  release: true
+  package:
+    libraries: true
+    release: true
